RESOLVED FIXED117684
Fixed backgrounds in composited layers not repainted on scrolling
https://bugs.webkit.org/show_bug.cgi?id=117684
Summary Fixed backgrounds in composited layers not repainted on scrolling
Simon Fraser (smfr)
Reported 2013-06-16 14:56:29 PDT
Fixed backgrounds in composited layers not repainted on scrolling
Attachments
Patch (13.66 KB, patch)
2013-06-16 15:06 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-06-16 14:58:17 PDT
Simon Fraser (smfr)
Comment 2 2013-06-16 15:06:26 PDT
Tim Horton
Comment 3 2013-06-16 15:25:23 PDT
Comment on attachment 204793 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204793&action=review > Source/WebCore/ChangeLog:14 > + do for position:fixed, and repainting each of the on scrolling. each of the. > Source/WebCore/page/FrameView.cpp:1772 > + RenderObject* renderer = *it; don't really need the local
Simon Fraser (smfr)
Comment 4 2013-06-16 16:33:32 PDT
Simon Fraser (smfr)
Comment 5 2013-06-16 21:24:04 PDT
Note You need to log in before you can comment on or make changes to this bug.